@startuml

title __SEMETHODS's Class Diagram__\n

  namespace com.napier.sem {
    class com.napier.sem.App {
    }
  }
  

  namespace com.napier.sem {
    class com.napier.sem.Department {
    }
  }
  

  namespace com.napier.sem {
    class com.napier.sem.Employee {
    }
  }
  

  com.napier.sem.Department o-- com.napier.sem.Employee : manager
  com.napier.sem.Employee o-- com.napier.sem.Employee : manager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
